--- a/QLTraiTreMoCoi/Areas/Admin/Views/Account/ListAccount.cshtml
+++ b/QLTraiTreMoCoi/Areas/Admin/Views/Account/ListAccount.cshtml
@@ -33,7 +33,7 @@
                     <tbody id="childrenTable">
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ111</td>
                             <td class="text-center">Nữ</td>
@@ -49,7 +49,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ111</td>
                             <td class="text-center">Nữ</td>
@@ -65,7 +65,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ111</td>
                             <td class="text-center">Nữ</td>
@@ -81,7 +81,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ222</td>
                             <td class="text-center">Nữ</td>
@@ -97,23 +97,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
-                            </td>
-                            <td class="text-center">Nguyễn Phước Kỳ222</td>
-                            <td class="text-center">Nam</td>
-                            <td class="text-center">15-01-2004</td>
-                            <td>Quảng Trị</td>
-                            <td class="text-center">
-                                <a asp-area="Admin" asp-controller="Account" asp-action="EditAccount" class="btn btn-sm btn-info text-white">
-                                    <i class="fa-solid fa-eye"></i>
-                                </a>
-                                <button class="btn btn-sm btn-warning"><i class="fa-solid fa-pen-to-square"></i></button>
-                                <button class="btn btn-sm btn-danger"><i class="fa-solid fa-trash"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ222</td>
                             <td class="text-center">Nam</td>
@@ -129,7 +113,23 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                            </td>
+                            <td class="text-center">Nguyễn Phước Kỳ222</td>
+                            <td class="text-center">Nam</td>
+                            <td class="text-center">15-01-2004</td>
+                            <td>Quảng Trị</td>
+                            <td class="text-center">
+                                <a asp-area="Admin" asp-controller="Account" asp-action="EditAccount" class="btn btn-sm btn-info text-white">
+                                    <i class="fa-solid fa-eye"></i>
+                                </a>
+                                <button class="btn btn-sm btn-warning"><i class="fa-solid fa-pen-to-square"></i></button>
+                                <button class="btn btn-sm btn-danger"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="text-center">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ333</td>
                             <td class="text-center">Nam</td>
@@ -145,7 +145,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ333</td>
                             <td class="text-center">Nam</td>
@@ -161,7 +161,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ333</td>
                             <td class="text-center">Nam</td>
