--- a/QLTraiTreMoCoi/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/QLTraiTreMoCoi/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <!-- logo -->
             <div class="d-flex align-items-center gap-3">
-                <img src="./images//image.png" class="rounded" style="width: 100px; height: 70px;" alt="">
+                <img src="~/images/image.png" class="rounded" style="width: 100px; height: 70px;" alt="">
                 <p class="text-white fs-5 m-0">Trại trẻ mồ côi <br>TP. Đà Nẵng</p>
             </div>
             <div class="d-flex align-items-center gap-5">
@@ -48,7 +48,7 @@
         <div class="d-flex flex-column gap-2">
             <a href="" class="text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-list"></i> Thống kê</a>
             <a asp-area="Admin" asp-controller="Account" asp-action="ListAccount" class="text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-user"></i> Tài Khoản</a>
-            <a asp-area="Admin" asp-controller="Home" asp-action="AcceptChild" class="text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-square-check"></i> Xác nhận trẻ</a>
+            <a asp-area="Admin" asp-controller="Home" asp-action="ListAccept" class="text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-square-check"></i> Xác nhận trẻ</a>
             <a asp-area="Admin" asp-controller="Approve" asp-action="ListApprove" class="text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-thumbs-up"></i> Duyệt đơn đăng ký</a>
             <a asp-area="Admin" asp-controller="Home" asp-action="ListChild" class="active text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-user"></i> Trẻ</a>
             <a href="" style="bottom: 20px; left: 20px;" class="position-absolute text-hover text-black px-3 py-2 d-flex align-items-center gap-3 text-decoration-none"><i class="fa-solid fa-arrow-right-from-bracket"></i> Log out</a>
