--- a/QLTraiTreMoCoi/Areas/User/Views/Home/Home.cshtml
+++ b/QLTraiTreMoCoi/Areas/User/Views/Home/Home.cshtml
@@ -8,7 +8,7 @@
     <section class="mb-5">
         <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="./images/home-intro.jpg" class="img-fluid rounded" alt="Giới thiệu">
+                <img src="~/images/home-info.jpg" class="img-fluid rounded" alt="Giới thiệu">
             </div>
             <div class="col-md-6">
                 <h2 class="mb-3">Chào mừng đến với Trại trẻ mồ côi TP. Đà Nẵng</h2>
@@ -26,7 +26,7 @@
         <div class="row g-4">
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="./images/service-1.jpg" class="card-img-top" alt="Gửi trẻ">
+                    
                     <div class="card-body">
                         <h5 class="card-title">Đăng ký gửi trẻ</h5>
                         <p class="card-text">Giúp các bé có mái nhà và sự chăm sóc tốt nhất trong môi trường an toàn, yêu thương.</p>
@@ -36,7 +36,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="./images/service-2.jpg" class="card-img-top" alt="Nhận nuôi">
+                    
                     <div class="card-body">
                         <h5 class="card-title">Nhận nuôi trẻ</h5>
                         <p class="card-text">Mang lại hạnh phúc cho các em nhỏ bằng cách trở thành gia đình mới cho các em.</p>
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card h-100">
-                    <img src="./images/service-3.jpg" class="card-img-top" alt="Tình nguyện">
+                  
                     <div class="card-body">
                         <h5 class="card-title">Tình nguyện viên</h5>
                         <p class="card-text">Tham gia hoạt động thiện nguyện, góp phần tạo nên môi trường sống tích cực cho các em.</p>
@@ -62,16 +62,16 @@
         <h3 class="text-center mb-4">Hình ảnh hoạt động</h3>
         <div class="row g-3">
             <div class="col-md-3 col-6">
-                <img src="./images/gallery-1.jpg" class="img-fluid rounded" alt="Gallery">
+                <img src="~/images/hd2.jpg" style="width: 264px; height: 160px;" class="img-fluid rounded" alt="Gallery">
             </div>
             <div class="col-md-3 col-6">
-                <img src="./images/gallery-2.jpg" class="img-fluid rounded" alt="Gallery">
+                <img src="~/images/hd3.jpg" style="width: 264px; height: 160px;" class="img-fluid rounded" alt="Gallery">
             </div>
             <div class="col-md-3 col-6">
-                <img src="./images/gallery-3.jpg" class="img-fluid rounded" alt="Gallery">
+                <img src="~/images/hd4.jpg" style="width: 264px; height: 160px;" class="img-fluid rounded" alt="Gallery">
             </div>
             <div class="col-md-3 col-6">
-                <img src="./images/gallery-4.jpg" class="img-fluid rounded" alt="Gallery">
+                <img src="~/images/hd5.jpg" style="width: 264px; height: 160px;" class="img-fluid rounded" alt="Gallery">
             </div>
         </div>
     </section>
@@ -83,63 +83,63 @@
             <div id="childSlider" class="d-flex transition" style="gap: 1rem; transition: transform 0.6s ease;">
                 <!-- Mỗi bé là 1 card -->
                 <div class="child-card card text-center" style="min-width: 30%; flex-shrink: 0;">
-                    <img src="./images/child-1.jpg" class="card-img-top" alt="Bé 1">
+                    <img src="~/images/tre.jpg" class="card-img-top" alt="Bé 1">
                     <div class="card-body">
                         <h5 class="card-title">Bé An</h5>
                         <p class="card-text">4 tuổi, yêu vẽ tranh.</p>
                     </div>
                 </div>
                 <div class="child-card card text-center" style="min-width: 30%; flex-shrink: 0;">
-                    <img src="./images/child-2.jpg" class="card-img-top" alt="Bé 2">
+                    <img src="~/images/tre2.jpg" class="card-img-top" alt="Bé 2">
                     <div class="card-body">
                         <h5 class="card-title">Bé Bình</h5>
                         <p class="card-text">6 tuổi, thích đọc truyện.</p>
                     </div>
                 </div>
                 <div class="child-card card text-center" style="min-width: 30%; flex-shrink: 0;">
-                    <img src="./images/child-3.jpg" class="card-img-top" alt="Bé 3">
+                    <img src="~/images/tre.jpg" class="card-img-top" alt="Bé 3">
                     <div class="card-body">
                         <h5 class="card-title">Bé Cúc</h5>
                         <p class="card-text">5 tuổi, thích ca hát.</p>
                     </div>
                 </div>
                 <div class="child-card card text-center" style="min-width: 30%; flex-shrink: 0;">
-                    <img src="./images/child-4.jpg" class="card-img-top" alt="Bé 4">
+                    <img src="~/images/tre3.jpg" class="card-img-top" style="height: 180px;"  alt="Bé 4">
                     <div class="card-body">
                         <h5 class="card-title">Bé Duy</h5>
                         <p class="card-text">7 tuổi, yêu thiên nhiên.</p>
                     </div>
                 </div>
                 <div class="child-card card text-center" style="min-width: 30%; flex-shrink: 0;">
-                    <img src="./images/child-5.jpg" class="card-img-top" alt="Bé 5">
+                    <img src="~/images/tre2.jpg" class="card-img-top" alt="Bé 5">
                     <div class="card-body">
                         <h5 class="card-title">Bé Em</h5>
                         <p class="card-text">5 tuổi, thân thiện.</p>
                     </div>
                 </div>
                 <div class="child-card card text-center" style="min-width: 30%; flex-shrink: 0;">
-                    <img src="./images/child-6.jpg" class="card-img-top" alt="Bé 6">
+                    <img src="~/images/tre3.jpg" class="card-img-top" style="height: 180px;" alt="Bé 6">
                     <div class="card-body">
                         <h5 class="card-title">Bé Phúc</h5>
                         <p class="card-text">6 tuổi, thích đàn hát.</p>
                     </div>
                 </div>
                 <div class="child-card card text-center" style="min-width: 30%; flex-shrink: 0;">
-                    <img src="./images/child-7.jpg" class="card-img-top" alt="Bé 7">
+                    <img src="~/images/tre.jpg" class="card-img-top" alt="Bé 7">
                     <div class="card-body">
                         <h5 class="card-title">Bé Hòa</h5>
                         <p class="card-text">4 tuổi, ngoan hiền.</p>
                     </div>
                 </div>
                 <div class="child-card card text-center" style="min-width: 30%; flex-shrink: 0;">
-                    <img src="./images/child-8.jpg" class="card-img-top" alt="Bé 8">
+                    <img src="~/images/tre3.jpg" class="card-img-top" style="height: 180px;" alt="Bé 8">
                     <div class="card-body">
                         <h5 class="card-title">Bé Khôi</h5>
                         <p class="card-text">6 tuổi, yêu thể thao.</p>
                     </div>
                 </div>
                 <div class="child-card card text-center" style="min-width: 30%; flex-shrink: 0;">
-                    <img src="./images/child-9.jpg" class="card-img-top" alt="Bé 9">
+                    <img src="~/images/tre2.jpg" class="card-img-top" alt="Bé 9">
                     <div class="card-body">
                         <h5 class="card-title">Bé Ngọc</h5>
                         <p class="card-text">5 tuổi, giúp đỡ bạn.</p>
