--- a/QLTraiTreMoCoi/Areas/User/Views/Shared/_Layout.cshtml
+++ b/QLTraiTreMoCoi/Areas/User/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <!-- logo -->
             <div class="d-flex align-items-center gap-3">
-                <img src="./images//image.png" class="rounded" style="width: 100px; height: 70px;" alt="">
+                <img src="~/images/image.png" class="rounded" style="width: 100px; height: 70px;" alt="">
                 <p class="text-white fs-5 m-0">Trại trẻ mồ côi <br>TP. Đà Nẵng</p>
             </div>
             <div class="d-flex align-items-center gap-5">
@@ -53,7 +53,7 @@
         <div class="d-flex" style="gap: 15rem;">
             <div class="d-flex flex-column gap-3">
                 <div class="d-flex align-items-center gap-3">
-                    <img src="./images//image.png" class="rounded" style="width: 100px; height: 70px;" alt="">
+                    <img src="~/images/image.png" class="rounded" style="width: 100px; height: 70px;" alt="">
                     <p class="text-white fs-5 m-0">Trại trẻ mồ côi <br>TP. Đà Nẵng</p>
                 </div>
                 <div class="d-flex align-items-center ga-2">
@@ -65,10 +65,10 @@
                     traimocoi@gmail.com
                 </div>
                 <div class="d-flex gap-3 align-items-center">
-                    <img style="width: 40px; height: 40px;" src="./images/footer-1.png" alt="">
-                    <img style="width: 40px; height: 40px;" src="./images/footer-2.png" alt="">
-                    <img style="width: 40px; height: 40px;" src="./images/footer-3.png" alt="">
-                    <img style="width: 40px; height: 40px;" src="./images/footer-4.png" alt="">
+                    <img style="width: 40px; height: 40px;" src="~/images/footer-1.png" alt="">
+                    <img style="width: 40px; height: 40px;" src="~/images/footer-2.png" alt="">
+                    <img style="width: 40px; height: 40px;" src="~/images/footer-3.png" alt="">
+                    <img style="width: 40px; height: 40px;" src="~/images/footer-4.png" alt="">
                 </div>
             </div>
             <div class="d-flex flex-column gap-3">
