--- a/QLTraiTreMoCoi/Areas/Admin/Views/Account/CreateAccount.cshtml
+++ b/QLTraiTreMoCoi/Areas/Admin/Views/Account/CreateAccount.cshtml
@@ -8,7 +8,7 @@
                 <a href="" class="position-absolute" style="top: 15px; right: 20px;"><i class="fa-solid fa-xmark fs-4 text-black"></i></a>
                 <form action="" class="d-flex align-items-start gap-5">
                     <div class="d-flex align-items-center flex-column gap-3" style="width: 30%;">
-                        <img id="previewImage" src="./images/image 4.png" class="w-100" style="height: 200px; object-fit: cover;" alt="Preview">
+                        <img id="previewImage" src="~/images/image 4.png" class="w-100" style="height: 200px; object-fit: cover;" alt="Preview">
 
                         <input type="file" id="imageUpload" accept="image/*" style="display: none;">
                         <button id="uploadBtn" class="bg-primary-color text-white px-3 py-2 rounded" type="button">
