--- a/QLTraiTreMoCoi/Areas/Admin/Views/Approve/ListApprove.cshtml
+++ b/QLTraiTreMoCoi/Areas/Admin/Views/Approve/ListApprove.cshtml
@@ -24,7 +24,7 @@
                     <tbody id="childrenTable">
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ111</td>
                             <td class="text-center">Nữ</td>
@@ -38,7 +38,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ111</td>
                             <td class="text-center">Nữ</td>
@@ -52,7 +52,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ111</td>
                             <td class="text-center">Nữ</td>
@@ -66,7 +66,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ222</td>
                             <td class="text-center">Nữ</td>
@@ -80,21 +80,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
-                            </td>
-                            <td class="text-center">Nguyễn Phước Kỳ222</td>
-                            <td class="text-center">Nam</td>
-                            <td class="text-center">15-01-2004</td>
-                            <td>Quảng Trị</td>
-                            <td class="text-center">
-                                <a asp-area="Admin" asp-controller="Approve" asp-action="ApproveApplication" class="btn btn-sm btn-info text-white">
-                                    Xem chi tiết
-                                </a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ222</td>
                             <td class="text-center">Nam</td>
@@ -108,7 +94,21 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                            </td>
+                            <td class="text-center">Nguyễn Phước Kỳ222</td>
+                            <td class="text-center">Nam</td>
+                            <td class="text-center">15-01-2004</td>
+                            <td>Quảng Trị</td>
+                            <td class="text-center">
+                                <a asp-area="Admin" asp-controller="Approve" asp-action="ApproveApplication" class="btn btn-sm btn-info text-white">
+                                    Xem chi tiết
+                                </a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="text-center">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ333</td>
                             <td class="text-center">Nam</td>
@@ -122,7 +122,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ333</td>
                             <td class="text-center">Nam</td>
@@ -136,7 +136,7 @@
                         </tr>
                         <tr>
                             <td class="text-center">
-                                <img src="./images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
+                                <img src="~/images/image 4.png" alt="Avatar" style="width: 80px; height: 80px; object-fit: cover; border-radius: 5px;">
                             </td>
                             <td class="text-center">Nguyễn Phước Kỳ333</td>
                             <td class="text-center">Nam</td>
