--- a/QLTraiTreMoCoi/Areas/Admin/Views/Home/AcceptChild.cshtml
+++ b/QLTraiTreMoCoi/Areas/Admin/Views/Home/AcceptChild.cshtml
@@ -3,12 +3,12 @@
 
     <div class="px-5 py-3" style="background-color: #e0e0e0; min-height: 50vh; width: 78%;">
         <div class="">
-            <p class="fs-5">QUẢN LÝ TÀI KHOẢN</p>
+            <p class="fs-5">XÁC NHẬN TRẺ</p>
             <div class="shadow bg-white rounded p-5 position-relative" style="width: 50vw">
                 <a href="" class="position-absolute" style="top: 15px; right: 20px;"><i class="fa-solid fa-xmark fs-4 text-black"></i></a>
                 <form action="" class="d-flex align-items-start gap-5">
                     <div class="d-flex align-items-center flex-column gap-3" style="width: 30%;">
-                        <img id="previewImage" src="./images/image 4.png" class="w-100" style="height: 200px; object-fit: cover;" alt="Preview">
+                        <img id="previewImage" src="~/images/image 4.png" class="w-100" style="height: 200px; object-fit: cover;" alt="Preview">
 
                         <input type="file" id="imageUpload" accept="image/*" style="display: none;">
                         <button id="uploadBtn" class="bg-primary-color text-white px-3 py-2 rounded" type="button">
@@ -45,6 +45,10 @@
                             <input style="width: 58%;" class="border-1 border-black px-3 py-2" type="text" name="" id="" value="Bình thường">
                         </div>
                         <div class="d-flex justify-content-between align-items-center">
+                            <label class="fw-bold" for="">Trạng thái:</label>
+                            <input style="width: 58%;" class="border-1 border-black px-3 py-2" type="text" name="" id="" value="Chưa rời trại">
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
                             <label class="fw-bold" for="">Hoàn cảnh:</label>
                             <select style="width: 58%;" class="border-1 border-black px-3 py-2" name="" id="">
                                 <option selected value="">Trẻ bị bỏ rơi</option>
@@ -52,7 +56,7 @@
                         </div>
 
                         <div class="d-flex justify-content-end gap-4 mt-3 align-items-center">
-                            <button class="btn btn-primary" type="submit">Xác nhận tiếp nhận trẻ</button>
+                            <button class="btn btn-primary" type="submit">Xác nhận</button>
                         </div>
                     </div>
                 </form>
