--- a/QLTraiTreMoCoi/Areas/User/Views/Home/UpdateInfo.cshtml
+++ b/QLTraiTreMoCoi/Areas/User/Views/Home/UpdateInfo.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="shadow bg-white rounded p-5 position-relative" style="width: 80vw">
     <form action="" class="d-flex align-items-start gap-5">
         <div class="d-flex align-items-center flex-column gap-3" style="width: 30%; margin:0 70px ;">
-            <img id="previewImage" src="./images/image 4.png" style="height: 200px; object-fit: cover; width: 200;" alt="Preview">
+            <img id="previewImage" src="~/images/image 4.png" style="height: 200px; object-fit: cover; width: 200;" alt="Preview">
 
             <input type="file" id="imageUpload" accept="image/*" style="display: none;">
             <button id="uploadBtn" class="bg-primary-color text-white px-3 py-2 rounded" type="button">
